[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/pixelcaps_quiz.tres" type="DynamicFont" id=1]
[ext_resource path="res://Images/UI/play.png" type="Texture" id=2]
[ext_resource path="res://Images/UI/quit.png" type="Texture" id=3]
[ext_resource path="res://Room Scripts/mainmenu.gd" type="Script" id=4]
[ext_resource path="res://Font/pixelcaps_main_menu.tres" type="DynamicFont" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 150.0
margin_right = 1360.0
margin_bottom = 350.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "
[center][color=#ffff00]eco[/color][color=#5890cb]maniac[/color][/center]"
text = "
ecomaniac"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="."]
margin_left = 570.0
margin_top = 400.0
margin_right = 870.0
margin_bottom = 550.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 570.0
margin_top = 650.0
margin_right = 870.0
margin_bottom = 800.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controller" type="Node" parent="."]
script = ExtResource( 4 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_top = 1000.0
margin_right = 1440.0
margin_bottom = 1080.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[color=#ffff00]Created by:[/color] Sam Hansen, jayson nguyen, jessica ho, phillip peterson, tzu-yu lin"
text = "Created by: Sam Hansen, jayson nguyen, jessica ho, phillip peterson, tzu-yu lin"
[connection signal="mouse_entered" from="Play" to="controller" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="controller" method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="controller" method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Quit" to="controller" method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="controller" method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="Quit" to="controller" method="_on_Quit_pressed"]
